GEOT-1732, got rid of Session.getLock(), started to port code to Session.execute(Command)
git-svn-id: http://svn.osgeo.org/geotools/trunk@30298 e5c1c795-43da-0310-a71f-fac65c449510